test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 09 Mar 2026 03:18:51 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="x+4ulWIgniins/zsenITP/nEbr6Jkkvg", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}